# botnet

./: .gitignore
c2/cli/: go.mod
c2/core/: Cargo.toml  go.mod
c2/core/migration/src/: m20220101_000001_create_table.rs
client/payload/: go.mod
client/stager/: Cargo.toml
client/stager/src/: main.rs
dropper/: go.mod  go.sum  main.go
