[workspace]
members = [".", "migration"]

[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
sea-orm-migration = { version = "1.1.10", features = ["sqlx-sqlite"] }
tokio = { version = "1.44.2", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "fs",
] }
migration = { path = "migration" }
